--- a/data2.html
+++ b/data2.html
@@ -43,8 +43,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="data.html">Data</a>
                     </li>
-                    <!--<li class="nav-item">
-                            <a class="nav-link" href="data2.html">Data2</a>-->
                     </li>
                     </li>
                 </ul>
@@ -57,70 +55,72 @@
     </p>
 
 </body>
-<!-- content-->
-<PP>
-    <div class="container">
-        <div class="row">
-            <div class="col-8 col-md-12">
-                <div class="box">
-                    <h3 class="title">Summary Latitude</h3>
-                    <hr>
-                </div>
-                <!-- image box -->
-                <div class="col-md-5 col-md-12">
-                    <div class="summaryImage">
-                        <!--<img src="../WebVisulaizationDashboard/Resources/assets/images/Fig1.png"
-                            class="Visualization rounded float-left" alt="Responsive image">-->
-                    </div>
-                </div>
-                <p>
-                    The purpose of this project was to analyze how weather changes as you get closer to the equator. To
-                    accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on
-                    over 500
-                    cities.
-                </p>
-                <p>
-                    After assembling the dataset, we used Matplltlib to plot various aspects of weather vs. latitude.
-                    Factors we
-                    looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source
-                    data and
-                    visualizations created as part of the analysis, as well as explanations and descriptions of any
-                    trends and
-                    correlations witnessed.
-                </p>
-            </div class="col-lg-5 col-md-12">
-            <div class="box">
-                <h3 class"title"> Visualizations</h3>
-                <hr>
-                <div class="container">
-                    <div class="row" style="padding-bottom:20px;">
-                        <div class="col-6">
-                            <a href="max_temperature.html">
-                                <img class="panel" src="Resources/assets/images/Fig1.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a href="humidity.html">
-                                <img class="panel" src="Resources/assets/images/Fig2.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a href="coludiness.html">
-                                <img class="panel" src="Resources/assets/images/Fig3.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a href="wind_speed.html">
-                                <img class="panel" src="Resources/assets/images/Fig4.png" alt="">
-                            </a>
-                        </div>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-</PP>
 
+
+<!-- Content Section -->
+<html>
+
+<head>
+    <title>show csv</title>
+</head>
+
+<body>
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <style>
+            table {
+                border-collapse: collapse;
+                border: 2px black solid;
+                font: 12px sans-serif;
+            }
+
+            td {
+                border: 1px black solid;
+                padding: 5px;
+            }
+        </style>
+    </head>
+
+    <body>
+        <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+        <script src="Resources/cities.csv"></script>
+
+        <script type="text/javascript" charset="utf-8">
+            d3.text("Resources/cities.csv", function (datasetText) {
+
+                var parsedCSV = d3.csv.parseRows(datasetText);
+
+                var sampleHTML = d3.select("#viz")
+                    .append("table")
+                    .style("border-collapse", "collapse")
+                    .style("border", "2px black solid")
+
+                    .selectAll("tr")
+                    .data(parsedCSV)
+                    .enter().append("tr")
+
+                    .selectAll("td")
+                    .data(function (d) { return d; })
+                    .enter().append("td")
+                    .style("border", "1px black solid")
+                    .style("padding", "5px")
+                    .on("mouseover", function () { d3.select(this).style("background-color", "aliceblue") })
+                    .on("mouseout", function () { d3.select(this).style("background-color", "white") })
+                    .text(function (d) { return d; })
+                    .style("font-size", "12px");
+            });
+        </script>
+    </body>
+
+    </html>
+
+</body>
+
+</html>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
