--- a/humidity.html
+++ b/humidity.html
@@ -52,6 +52,23 @@
         </div>
     </nav>
 
+    <div class="box">
+        <h3 class"title"> Visualizations</h3>
+        <hr>
+        <div class="container">
+            <div class="row" style="padding-bottom:20px;">
+                <div class="col-6">
+                    <a href="humidity.html">
+                        <img class="panel" src="Resources/assets/images/Fig2.png" alt="">
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
 </body>
 
 <!-- Optional JavaScript -->
