--- a/wind_speed.html
+++ b/wind_speed.html
@@ -52,6 +52,21 @@
         </div>
     </nav>
 
+    <div class="box">
+        <h3 class"title"> Visualizations</h3>
+        <hr>
+        <div class="container">
+            <div class="row" style="padding-bottom:20px;">
+                <div class="col-6">
+                    <a href="wind_speed.html">
+                        <img class="panel" src="Resources/assets/images/Fig4.png" alt="">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </body>
 
 <!-- Optional JavaScript -->
